Fixed spelling of zucchini

--- a/colors.sass
+++ b/colors.sass
@@ -65,7 +65,7 @@ $mosque: 		#036a6e
 $midnight_moss: #041004
 $black_pearl: 	#041322
 $blue_whale: 	#042e4c
-$zuccini: 		#044022
+$zucchini: 		#044022
 $teal_blue: 	#044259
 $deep_cove: 	#051040
 $gulf_blue: 	#051657
